# budget_app

./: .gitignore  Procfile  README.md  manage-app
backend/: Procfile  README.md  db.sqlite3  fakedata.py  fly.toml  manage.py  poetry  poetry.txt  pyproject.toml  pyvenv.cfg  requirements.txt  runscript.py
backend/backend/: client.py  db.sqlite3  fakedata.py  secretkey
backend/backend/main/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/backend/users/: models.py  serializers.py  urls.py  views.py
backend/backend/users/migrations/: 0001_initial.py  0002_rename_user_account__user.py  0003_rename__user_account_user.py
backend/budget_app_backend/: asgi.py  secretkey  settings.py  urls.py  wsgi.py
backend/transactions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/transactions/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_remove_account_balance.py
frontend/: .prettierignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/.next/: build-manifest.json  trace
frontend/components/: Footer.tsx  Header.tsx  Login.tsx  Page.tsx  Register.tsx
frontend/hooks/: useDebounce.tsx  useIsLoggedIn.tsx  useIsMobile.tsx
frontend/lib/: IronSession.ts
frontend/pages/: _app.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx  transactions.tsx
frontend/styles/: Components.module.scss  Form.module.scss  Header.module.scss  HeaderFooter.module.scss  Login.module.scss  Page.module.scss  Transactions.module.scss  (+3 more)
(+101 files in other folders)
